# semanticore

./: .editorconfig  .gitignore  ARCHITECTURE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml
crates/semanticore-core/: Cargo.toml
crates/semanticore-core/src/: lib.rs
docs/rfcs/: 0001-crate-graph.md  0002-storage-trait.md  0003-reasoner-traits.md  0004-context-api.md  0005-projection-api.md
