[workspace]
resolver = "2"
members = ["crates/semanticore-core"]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/TTTSNB/semanticore"
authors = ["Elliott Risch <elliottrisch@gmail.com>"]
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
