[package]
name = "semanticore-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Shared types and traits for the semantiCore Rust ecosystem (IRIs, terms, triples, graphs)."

[lints]
workspace = true
